--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>欢迎来到我的网页</h1>
     <p>这是我的第一个网页。</p>
+
+    <div class="custom-cursor"></div> <!-- 添加一个自定义鼠标指针元素 -->
 </body>
 </html>
